# l3_terrain_modeling

./: .gitignore
l3_terrain_model/: CMakeLists.txt  package.xml
l3_terrain_model/include/l3_terrain_model/: terrain_model.h  typedefs.h
l3_terrain_model/src/: terrain_model.cpp
l3_terrain_model_generator/: CMakeLists.txt  package.xml  plugins.xml  setup.py
l3_terrain_model_generator/config/: example_plugin_sets.yaml  grid_map_vis.yaml  point_cloud_portioner.yaml  terrain_model.rviz
l3_terrain_model_generator/config/rviz/: default.rviz
l3_terrain_model_generator/include/l3_terrain_model_generator/: point_cloud_portioner_node.h  terrain_model_generator.h  terrain_model_generator_node.h  typedefs.h
l3_terrain_model_generator/include/l3_terrain_model_generator/plugins/aggregator/: process_chain.h  sensor.h  sensors.h
l3_terrain_model_generator/include/l3_terrain_model_generator/plugins/base/: filter_plugin.h  generator_plugin.h  grid_map_filter_plugin.h  grid_map_generator_plugin.h  point_cloud_filter_plugin.h  point_cloud_sensor_plugin.h  process_plugin.h  processor_plugin.h  publisher_plugin.h  sensor_plugin.h
l3_terrain_model_generator/include/l3_terrain_model_generator/plugins/std/: periodic_process.h
l3_terrain_model_generator/include/l3_terrain_model_generator/plugins/std/filter/: grid_map_crop_filter.h  pcl_mls_smooth_filter.h  pcl_pass_through_box_filter.h  pcl_pass_through_ellipse_filter.h  pcl_statistical_outlier_filter.h  pcl_voxel_grid_filter.h
l3_terrain_model_generator/include/l3_terrain_model_generator/plugins/std/generator/: copy_map_layer_generator.h  edges_cloud_generator.h  elevation_map_generator.h  gradients_cloud_generator.h  grid_map_pose_updater.h  ground_level_map_generator.h  normals_cloud_generator.h  occupancy_map_generator.h  octree_generator.h  surface_mesh_generator.h
l3_terrain_model_generator/include/l3_terrain_model_generator/plugins/std/publisher/: grid_map_publisher.h  normals_publisher.h  occupancy_map_publisher.h  octree_publisher.h  point_cloud_publisher.h  surface_mesh_publisher.h  terrain_model_publisher.h
l3_terrain_model_generator/include/l3_terrain_model_generator/plugins/std/sensor/: generic_lidar_sensor.h  generic_rgbd_sensor.h  grid_map_sensor.h  image_map_sensor.h  sensor_pose_subscriber.h
l3_terrain_model_generator/include/l3_terrain_model_generator/utils/: data_handle.h  data_manager.h  helper.h  macros.h  math.h  utils.h
l3_terrain_model_generator/include/l3_terrain_model_generator/utils/pcl/: incremental_octree_search.h  octree_voxel_grid.h  pcl_data_handle.h  pcl_utils.h  point_cloud_filter.h
l3_terrain_model_generator/launch/: rviz_terrain_model.launch  terrain_model_generator.launch  terrain_model_generator_bag.launch  terrain_model_generator_image.launch  terrain_model_generator_johnny.launch  terrain_model_generator_pcd.launch  terrain_model_generator_test_oneshot.launch
l3_terrain_model_generator/scripts/: download_examples.sh  download_pcd.sh
l3_terrain_model_generator/src/: point_cloud_portioner_node.cpp  terrain_model_generator.cpp  terrain_model_generator_node.cpp
l3_terrain_model_generator/src/l3_terrain_model_generator/: image_map_publisher.py
l3_terrain_model_generator/src/plugins/aggregator/: process_chain.cpp  sensor.cpp  sensors.cpp
l3_terrain_model_generator/src/plugins/base/: filter_plugin.cpp  generator_plugin.cpp  grid_map_filter_plugin.cpp  grid_map_generator_plugin.cpp  point_cloud_filter_plugin.cpp  point_cloud_sensor_plugin.cpp  process_plugin.cpp  processor_plugin.cpp  publisher_plugin.cpp  sensor_plugin.cpp
l3_terrain_model_generator/src/plugins/std/: periodic_process.cpp
l3_terrain_model_generator/src/plugins/std/filter/: grid_map_crop_filter.cpp  pcl_mls_smooth_filter.cpp  pcl_pass_through_box_filter.cpp  pcl_pass_through_ellipse_filter.cpp  pcl_statistical_outlier_filter.cpp  pcl_voxel_grid_filter.cpp
l3_terrain_model_generator/src/plugins/std/generator/: copy_map_layer_generator.cpp  edges_cloud_generator.cpp  elevation_map_generator.cpp  gradients_cloud_generator.cpp  grid_map_pose_updater.cpp  ground_level_map_generator.cpp  normals_cloud_generator.cpp  occupancy_map_generator.cpp  octree_generator.cpp  surface_mesh_generator.cpp
l3_terrain_model_generator/src/plugins/std/publisher/: grid_map_publisher.cpp  normals_publisher.cpp  occupancy_map_publisher.cpp  octree_publisher.cpp  point_cloud_publisher.cpp  surface_mesh_publisher.cpp  terrain_model_publisher.cpp
l3_terrain_model_generator/src/plugins/std/sensor/: generic_lidar_sensor.cpp  generic_rgbd_sensor.cpp  grid_map_sensor.cpp  image_map_sensor.cpp  sensor_pose_subscriber.cpp
l3_terrain_model_generator/src/utils/: data_handle.cpp  data_manager.cpp  helper.cpp  math.cpp  utils.cpp
l3_terrain_model_generator/src/utils/pcl/: incremental_octree_search.cpp  octree_voxel_grid.cpp  pcl_data_handle.cpp  pcl_utils.cpp  point_cloud_filter.cpp
l3_terrain_model_msgs/: CMakeLists.txt  package.xml
l3_terrain_model_msgs/msg/: TerrainModelMsg.msg  TerrainModelRequest.msg
